[project]
name = "pypsa-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.2"
dependencies = [
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pre-commit>=4.1.0",
    "pypsa>=0.30.0",
    "ruff>=0.9.9",
    "seaborn>=0.13.2",
    "streamlit>=1.43.0",
    "watchdog>=6.0.0",
]
